tests/typechecker/pass/010-let.hyg
let x: int = 3;
let y: int = {
    let z: int = 4;
    x + z
};
println(x + x)
