tests/typechecker/fail/012-let.hyg
let x: int = 3;
let y: int = x + w;
println(x + x)
